[tool.poetry]
name = "protowrap"
version = "0.0.1-pre"
description = "proto wrap api"
readme = "README.md"
authors = [
    "Matthew Taylor"
]


[tool.poetry.dependencies]
python = ">=3.10,<3.12"
toml = "^0.10.2"
pyyaml = "6.0.1"
grpcio = "^1.64.0"
grpcio-health-checking = "^1.64.0"
grpcio-tools = "^1.64.0"
grpclib = "^0.4.7"
pillow = "10.4.0"
matplotlib = "3.9.2"
pandas = "2.2.3"
betterproto = { version = "2.0.0b6", extras = ["compiler"] }